--- a/photo.css
+++ b/photo.css
@@ -35,7 +35,7 @@
 	position: absolute;
 	height: 23px;
 	width:23px;
-	background: url(../images/about-icon.png) no-repeat;
+	background: url(images/about-icon.png) no-repeat;
 	  margin-left: -35px;
   margin-top: 3px
 }
@@ -72,7 +72,7 @@
 	width:23px;
 	margin-top: 7px;
     margin-left: -14px;
-    background: url(../images/arrow.png) no-repeat;
+    background: url(images/arrow.png) no-repeat;
 
 
 }
@@ -304,7 +304,7 @@
 	width:23px;
 	margin-top: 16px;
     
-    background: url(../images/arrow1.png) no-repeat;
+    background: url(images/arrow1.png) no-repeat;
     margin-left: -26px;
 }
 .hr ul{
