--- a/photo.css
+++ b/photo.css
@@ -336,11 +336,12 @@
 
 }
 .hr li:hover {
-		background: #2697dd;
-		background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
-		background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
-		background: -webkit-linear-gradient(top, #4f5964 0%,#2697dd 40%);
+		color: #2697dd;	
 }
+.hr a:hover {
+		color: #2697dd;	
+}
+
 .hr ul li {
 		float: none; 
 		padding-left: 12px;
